name:                jpl-horizons-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/jpl-horizons-api
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          example@example.com
copyright:           2022 Marco Zocca
category:            API Web Astronomy
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     API.JPL.Horizons
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , megaparsec
                     , req
                     , scientific >= 0.3.7.0
                     , text >= 1.2.4.1
                     , time

executable jpl-horizons-api
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , jpl-horizons-api

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , jpl-horizons-api
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/jpl-horizons-api
